# mitulvaghamshi

./: README.md  analysis_strict_mode.yaml  mitulvaghamshi.code-workspace
bash/: bash-basics.sh  clone-repos.sh  create-repo.sh  mkrepo.sh  shbasic.md  zip-it.sh
config/: .zshrc  agy-settings.json  vs-2026-dark-export.json  vs-2026-dark.json
cpp/: hello.s  makefile.md  makefile2.txt  raii.txt  readme.md
gists/: API Guide.md  API Quick Guide.md  Action Verbs.md  AsyncAwait vs Promises.md  Big Number.md  Boolean Algebra.md  CSS Basic.md  Clarity and Precision.md  Cohesive Devices.md  Cover Later - sample 1.md  Cover Later - sample 2.md  Excel Formula.md  Fancy Terms.md  Get noticed by recruiters.md  Git Reset.md  Grammer.md  Interview Preparation.md  Interview.md  JS Async.md  JS Generator.md  JS Generators.md  Java Questions.md  Presentation Skills.md  SQL Join.md  SSH & SCP.md  Synonyms.md  Task 1 Letter.md  Task 2 Essay.md  Transferable Skills.md  big numbers.md  jQuery Basic.md
kotlin/: .gitignore  README.md
mds/: API Quick Guide.md  Action Verbs.md  Clarity and Precision.md  Get noticed by recruiters.md  Presentation Skills.md  Synonyms.md  Transferable Skills.md
other/: git-clone-user-repos.sh
python/: decorators.py  generators.py  html-parser.py  json-parser.py  network-request.py  os-module.py  postal-code.py  read-write.py  sqlite-db.py  (+2 more)
rust/rust_101/: Cargo.toml
rust/rust_101/src/: main.rs  testing.rs  threads.rs
rust/rust_101/src/static/: 404.html  index.html
rust/todo_app/: Cargo.toml
rust/todo_app/src/: cli.rs  file.rs  main.rs  task.rs
(+903 files in other folders)
