[package]
name = "rust_101"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tokio-websockets = { version = "0.4.0", features = ["client", "fastrand", "server", "sha1_smol"] }
# tokio = {version = "1.33.0", features = ["sync", "time", "macros", "rt-multi-thread"]}
reqwest = { version = "0.11.22", features = ["blocking", "rustls-tls"] }
futures-util = { version = "0.3.29", features = ["sink"] }
thiserror = "1.0.49"
scraper = "0.18.1"
http = "0.2.9"
rand = "0.8.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
