[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
home = "0.5.5"
serde_json = "1.0.107"
structopt = "0.3.26"

# We're going to need the serde feature for the chrono crate,
# so we can serialize the DateTime field.
[dependencies.chrono]
features = ["serde"]
version = "0.4.31"

[dependencies.serde]
features = ["derive"]
version = "1.0.188"
